# HDabourX

./: README.md
AI codes/: Readme.txt
AI codes/GAN 1D GUI App/: discriminator_final.h5  generator_final.h5  signal_generator_app.py  signal_generator_app.py.txt
AI codes/GAN 1D Simple/: GAN3.py  README.txt  🔥 Applications of a 1D Signal GAN.docx
AI codes/GAN 1D Simple torch/: discriminator_final.pth  gan_pytorch.py.txt  gan_pytorch2.py  gan_pytorch2.py.txt  gan_pytorchModel.py.txt  generator_final.pth  signal_generator_gui.py.txt
AI codes/GAN Better tones/: GANBetterTones.py  GANBetterTones.py.txt  GANBetterTones2.py  GANBetterTones3.py  audio_gan_app.py.txt  audio_gan_app2.py  generate_data.py.txt  generate_data2.py
AI codes/GAN Simple/: GAN1.py  GAN1.py.txt
AI codes/GAN Tones torch/: GANBetter_tones.py  GANBetter_tones2.py  GAN_tones.py  audio_gan_app.py  audio_gan_app2.py
AI codes/GAN tones ABC 1/: CreateCheckpoint.py.txt  GAN_trainABC.py  GAN_trainABC_checkpoints.py  GAN_trainABC_checkpoints.py.txt  GAN_trainABC_checkpointsX.py  README.txt  audio_gen_GUI.py  audio_gen_GUI.py.txt  generate_data.py
AI codes/LSTM Architectures/: LSTMArchComparison2.py  README.txt
AI codes/LSTM Architectures - Pytorch/: LSTMArchComparison.py.txt  LSTMArchComparison3Pytorch.py  LSTMarch1.py
AI codes/LSTM Prediction/: lstm_model.pt  lstmprediction.py
AI codes/RNN Simple/: README.txt  RNN1.py.txt  RNN2Model.py  RNN2Model.py.txt  RNN3Model.py  rnn_model.pt  (+1 more)
C++ Opencv/: Readme.txt
C++/WildCommand Arguments/src/: CMakeLists.txt  main.cpp
Python Apps/: Readme.txt
(+236 files in other folders)
